# CubePlusPlus

./: .cproject  .gitmodules  .hgignore  .hgsub  .hgsubstate  .project  CMakeLists.txt  Makefile  Makefile.util  README  autoupdate.sh  cmakeDebug  cmakeRelease  configure  format.sh  server.cfg
SQL/: mcpp.sql  update1.sql  update2.sql  update3.sql  update4.sql  update5.sql
TODO/: Blocks
doc/: Server.doxyfile
src/: Server.cpp
src/Block/: Block.cpp  Block.h  Block.hxx  BlockConstants.h  BlockList.cpp  BlockList.h  BlockMaterial.cpp  BlockMaterial.h  SoundBlock.cpp  SoundBlock.h
src/Block/Scripts/: BlockScript.cpp  BlockScript.h  RegisterBlockScripts.cpp  RegisterBlockScripts.h
src/Block/TileEntities/: TileEntity.h  (+17 more)
src/Chat/: ChatManager.cpp  ChatManager.h  ChatStream.cpp  ChatStream.h  PlayerChat.cpp  PlayerChat.h
src/Config/: Config.cpp  Config.h
src/Craft/: Craft.cpp  Craft.h  CraftContants.h  CraftManager.cpp  CraftManager.h
src/Database/: Database.h  DatabaseManager.cpp  DatabaseManager.h
src/Entity/: DiggingManager.cpp  DiggingManager.h  Entity.cpp  Entity.h  EntityConstants.h  EntityFallingBlock.cpp  EntityFallingBlock.h  EntityItem.cpp  EntityItem.h  EntityPlayer.cpp  EntityPlayer.h  LivingEntity.cpp  LivingEntity.h  PlayerAbilities.cpp  PlayerAbilities.h  Position.cpp  Position.h
src/Inventory/: Inventory.cpp  Inventory.h  InventoryConstants.h  InventoryCraft.cpp  InventoryCraft.h  InventoryEntityEquipement.cpp  InventoryEntityEquipement.h  InventoryFurnace.cpp  InventoryFurnace.h  InventoryPlayer.cpp  InventoryPlayer.h  Item.cpp  Item.h  Item.hxx  ItemList.cpp  ItemList.h  ItemStack.cpp  ItemStack.h
src/Logging/: Logger.cpp  Logger.h
src/Main/: Server.cpp
src/Message/: MessageList.cpp  MessageList.h
src/Network/: LoginManager.cpp  LoginManager.h  NetworkEncryption.cpp  NetworkEncryption.h  NetworkException.cpp  NetworkException.h  NetworkExceptionData.cpp  NetworkExceptionData.h  NetworkManager.cpp  NetworkManager.h  NetworkPacket.cpp  NetworkPacket.h  NetworkSession.cpp  NetworkSession.h  NetworkSession.hxx  Opcode.cpp  Opcode.h  OpcodeList.h  PacketHandler.cpp
src/Plugins/: PlayerModule.cpp  PlayerModule.h  PlayerModuleMgr.cpp  PlayerModuleMgr.h
src/Scripting/: ScriptManager.cpp  ScriptManager.h
src/Shell/: ShellCommandManager.cpp  ShellCommandManager.h
src/Util/: AABB.cpp  AABB.h  AABB.hxx  AssertUtil.h  BlockUtil.cpp  BlockUtil.h  BufferedRewindableQueue.cpp  BufferedRewindableQueue.h  BufferedRewindableQueue.hxx  ColorUtil.cpp  ColorUtil.h  FloatUtil.cpp  FloatUtil.h  IntUtil.cpp  IntUtil.h  RingBuffer.cpp  RingBuffer.h  Singleton.cpp  Singleton.h  StringUtil.cpp  StringUtil.h  types.h
src/Window/: Window.cpp  Window.h  WindowList.cpp  WindowList.h  WindowStaticData.cpp  WindowStaticData.h
src/World/: Chunk.cpp  Chunk.h  Chunk.hxx  Region.cpp  Region.h  RegionManager.cpp  RegionManager.h  VirtualChunk.cpp  VirtualChunk.h  VirtualSmallChunk.cpp  VirtualSmallChunk.h  World.cpp  World.h  World.hxx  WorldConstants.h  WorldManager.cpp  WorldManager.h
utils/: checkEndNamespace.sh  cleanUnusuedParameter.sh  generateScript.sh  generate_script.pl
utils/template/: BlockScriptFunctionList  BlockScriptTemplate.cpp  BlockScriptTemplate.h  WindowScriptFunctionList  WindowScriptTemplate.cpp  WindowScriptTemplate.h
www/: block.php  dbc.php  item.php  script.php
(+242 files in other folders)
